<resources>
    <string name="app_name">Londri for Owner</string>
    <string name="londri_logo">Londri Logo</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="save_login">Ingat saya</string>
    <string name="forgot_password">Lupa kata sandi?</string>
    <string name="login">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_sekarang">Daftar sekarang!</string>
    <string name="edit_no">Nomor Telephone</string>
    <string name="edit_nama">Nama Binatu</string>
    <string name="nama">Nama</string>
    <string name="step1">Step 1 of 3</string>
    <string name="step2">Step 2 of 3</string>
    <string name="step3">Step 3 of 3</string>
    <string name="informasi_binatu">Informasi Binatu</string>
    <string name="next">Lanjutkan</string>
    <string name="prev">Kembali</string>
    <string name="register">Daftar</string>
    <string name="lokasi">Lokasi</string>
    <string name="address">Alamat</string>
    <string name="photos">Foto Binatu</string>
    <string name="descriptionPhoto">Anda dapat mengunggah logo dari binatu anda</string>
    <string name="add_photo">Add photo</string>
    <string name="title_order">Pesanan</string>
    <string name="title_service">Layanan</string>
    <string name="title_history">History</string>
    <string name="title_profile">Akun</string>
    <string name="repeatPassword">Ulangi kata sandi</string>
    <string name="camera_option">Camera Option</string>
    <string name="gallery_option">Gallery Option</string>
    <string name="gallery">Galeri</string>
    <string name="tambahkan_gambar">Tambahkan Gambar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="idPesanan">OD-000000</string>
    <string name="beratPesanan">4 Kg</string>
    <string name="estimasiBiaya">Rp 40.000</string>
    <string name="slice">|</string>
    <string name="time">17.00</string>
    <string name="date">18-11-2023</string>
    <string name="orderDetail">Detail Pesanan</string>
    <string name="catatan">Catatan*</string>
    <string name="orderStatus">Pesanan Selesai</string>
    <string name="cuci">Cuci</string>
    <string name="price">7000/kg</string>
    <string name="layanan">Layanan</string>
    <string name="finishOrder">7 Pesanan diselesaikan</string>
    <string name="orderTotalFinish">Total Pendapatan : 200.000</string>
    <string name="waktu_dipesan">Waktu Dipesan</string>
    <string name="order_date">Tanggal dipesan</string>
    <string name="nomor_order">Nomor Order</string>
    <string name="jumlah_pesanan">Jumlah Pesanan</string>
    <string name="estimasi_biaya">Estimasi biaya</string>
    <string name="note">Tolong pisah baju warna putih</string>
    <string name="title_activity_register_lokasi">Location</string>
    <string name="title_activity_home">homes</string>
    <string name="EmptyMessage">Anda belum memiliki pesanan</string>
    <string name="open">Buka</string>
    <string name="close">Tutup</string>
    <string name="owner">Owner</string>
    <string name="logout">Logout</string>
    <string name="konfirmasi_logout">Konfirmasi Logout</string>
    <string name="desc_konfirmasi_logout">Apakah kamu yakin akan logout?</string>
    <string name="terima_pesanan">Simpan</string>
    <string name="empty_order">Belum ada pesanan masuk</string>
    <string name="status_pesanan">Status Pesanan</string>
    <string name="jasa_layanan">Jasa Layanan</string>
    <string name="empty_layanan">Anda belum memiliki layanan</string>
    <string name="tersedia">Tersedia</string>
    <string name="stat_null">Null</string>
    <string name="tidak_tersedia">Tidak Tersedia</string>
    <string name="edit_namalayanan">Nama Layanan</string>
    <string name="edit_hargalayanan">Harga Layanan</string>
    <string name="simpan">Simpan</string>
</resources>