<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_order">

    <fragment
        android:id="@+id/navigation_order"
        android:name="me.fitroh.londriforowner.ui.home.HomeFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_service"
        android:name="me.fitroh.londriforowner.ui.dashboard.DashboardFragment"
        android:label="@string/title_service"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="me.fitroh.londriforowner.ui.notifications.NotificationsFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_service" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="me.fitroh.londriforowner.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_service" />
</navigation>