<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.register.RegisterThreeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/londri_logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/step3"
        android:textColor="@color/black_200"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvLokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/photos"
        android:textColor="@color/black_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStep" />

    <ImageView
        android:id="@+id/imageStory"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/placeholder"
        android:onClick=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvLokasi"
        app:layout_constraintTop_toBottomOf="@+id/tvLokasi"
        android:contentDescription="@string/add_photo"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <TextView
        android:id="@+id/tvPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/descriptionPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageStory" />

    <Button
        android:id="@+id/btnDaftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:cornerRadius = "5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlaceholder" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prev"
        app:cornerRadius = "5dp"
        android:backgroundTint="@color/white"
        android:elevation="4dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/blue_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDaftar" />

</androidx.constraintlayout.widget.ConstraintLayout>